--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.5",
     "react-scripts": "3.4.1",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.4.0",
     "typescript": "~3.7.2",
     "uuid": "^8.3.2"
   },
@@ -58,14 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/node-logger": "^6.3.12",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.12",
-    "gh-pages": "^3.2.3"
   }
 }
