--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
     "@mui/material": "^5.0.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
-    "@types/uuid": "^8.3.1",
-    "axios": "^0.24.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "axios": "^0.22.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.4.0",
-    "typescript": "~3.7.2",
-    "uuid": "^8.3.2"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
